Fix translation issues (strings)
MOPPIOS-371

--- a/MoppApp/MoppApp/et.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/et.lproj/Localizable.strings
@@ -33,7 +33,7 @@
 "menu-help" = "ABI";
 "menu-recent-containers" = "HIILJUTISED DOKUMENDID";
 "menu-settings" = "SEADED";
-"menu-about" = "RAKENDUSE INFO";
+"menu-about" = "INFO";
 "menu-diagnostics" = "DIAGNOSTIKA";
 
 // Signature view
@@ -89,13 +89,12 @@
 "container-details-decryption-success" = "DEKRÜPTEERIMINE ÕNNESTUS";
 "container-details-file-already-exists" = "Fail on juba ümbrikus olemas";
 "container-header-files-title" = "Ümbriku sisu";
-"container-header-create-signing-files-title" = "Allkirjastamiseks valitud failid";
-"container-header-create-encryption-files-title" = "Krüpteerimiseks valitud failid";
+"container-header-create-files-title" = "Ümbriku sisu";
 "container-header-create-addressee-title" = "Adressaadid";
 "container-header-timestamp-title" = "Ajatempel";
 "container-header-signatures-title" = "Ümbriku allkirjad";
 "container-row-edit-remove" = "Eemalda";
-"container-header-title" = "KONTEINER:";
+"container-header-title" = "ÜMBRIK:";
 "container-error-message-invalid-signature" = "1 ALLKIRI EI OLE KEHTIV";
 "container-error-message-invalid-signatures" = "%d ALLKIRJA EI KEHTI";
 "container-error-message-unknown-signature" = "1 ALLKIRI ON TEADMATA";
@@ -141,26 +140,28 @@
 "done-button-title" = "Valmis";
 "recent-containers-empty-list-title" = "Dokumendid puuduvad";
 "recent-containers-empty-search-message" = "Dokumenti ei leitud";
+"search-container-file" = "Search container file";
 "sign-title-mobile-id" = "Mobiil-ID";
-"sign-title-id-card" = "ID kaart";
+"sign-title-id-card" = "ID-kaart";
 "card-reader-state-reader-not-found" = "Ühtegi kaardilugejat pole ühendatud";
 "card-reader-state-id-card-not-found" = "Kaardilugeja leitud.\nSisesta ID-kaart lugejasse.";
 "card-reader-state-id-card-connected" = "ID-kaart leitud.\nPärin andmeid.";
-"card-reader-state-ready-for-pin2" = "Valmis allkirjastamiseks ID-kaardiga.\n%@ (%@)\nSisesta PIN2";
-"card-reader-state-ready-for-pin1" = "Valmis allkirjastamiseks ID-kaardiga.\n%@ (%@)\nSisesta PIN1";
+"card-reader-state-ready-for-pin2" = "ID-kaart on valmis allkirjastamiseks";
+"card-reader-state-ready-for-pin1" = "ID-kaart on valmis dekrüpteerimiseks";
 "signing-in-progress" = "Toimub allkirjastamine.\nPalun oota.";
 "decryption-in-progress" = "Toimub dekrüpteerimine.\nPalun oota.";
-"wrong-pin2" = "Vale PIN2. %d katset järgi.\nSisestades %d korda vale PIN2 sinu PIN2 lukustub";
-"wrong-pin1" = "Vale PIN1. %d katset järgi.\nSisestades %d korda vale PIN1 sinu PIN1 lukustub";
-"wrong-pin2-single" = "Vale PIN2. 1 katse järgi.Sisestades vale PIN2-e sinu PIN2 lukustub";
-"wrong-pin1-single" = "Vale PIN1. 1 katse järgi.Sisestades vale PIN1-e sinu PIN1 lukustub";
-"card-reader-state-initial" = "Allkirjastamiseks ühenda kaardilugeja telefoniga ja sisesta enda ID-kaart lugejasse.\nKui kasutad Bluetooth lugejat siis veendu, et telefonis on sisse lülitatud Bluetooth";
-"pin2-textfield-label" = "PIN2";
-"pin1-textfield-label" = "PIN1";
-"pin2-blocked-alert" = "PIN2 blokeeritud.\nMine Minu eID vaatele, et avada PIN2";
+"wrong-pin2" = "Vale PIN2. Saad PIN2 koodi sisestada veel %d korda.";
+"wrong-pin1" = "Vale PIN1. Saad PIN1 koodi sisestada veel %d korda.";
+"wrong-pin2-single" = "Vale PIN2. Järgmise vale sisestusega lukustub PIN.";
+"wrong-pin1-single" = "Vale PIN1. Järgmise vale sisestusega lukustub PIN.";
+"card-reader-state-initial" = "Ühenda kaardilugeja telefoniga ja sisesta ID-kaart lugejasse. \nKui kasutad Bluetooth lugejat siis veendu, et telefonis on sisse lülitatud Bluetooth.";
+"pin2-textfield-label" = "Sisesta PIN2";
+"pin1-textfield-label" = "Sisesta PIN1";
+"pin2-blocked-alert" = "PIN2 on lukus. Mine Minu eID, et avada.";
+"pin1-blocked-alert" = "PIN1 on lukus. Mine Minu eID, et avada.";
 "generic-error-message" = "Midagi läks valesti. Palun proovi uuesti";
 "decryption-error-message" = "Midagi läks dekrüpteerimisel valesti. Palun proovi uuesti";
-"signing-aborted-message" = "Viga: signeerimise protsess katkestatud";
+"signing-aborted-message" = "Allkirjastamine katkestatud";
 "my-eid-status-reader-not-found" = "Ühenda kaardilugeja telefoniga ja sisesta ID-kaart lugejasse.";
 "my-eid-status-card-not-found" = "Kaardilugeja leitud.\nSisesta ID-kaart lugejasse.";
 "my-eid-status-requesting-data" = "ID-kaart leitud.\nPärin andmeid.";
@@ -229,7 +230,7 @@
 "my-eid-error-codes-are-same" = "Kehtiv ja uus %@ peavad olema erinevad";
 "my-eid-error-code-contained-in-personal-code" = "Uus %@ kood ei saa olla osa sinu isikukoodist";
 "my-eid-error-code-is-date-of-birth" = "Uus %@ kood ei saa olla sinu sünnikuupäev";
-"my-eid-error-code-too-easy" = "Uus %@ kood ei saa olla lihtne";
+"my-eid-error-code-too-easy" = "Uus %@ kood ei saa olla nii lihtne";
 "settings-title" = "Seaded";
 "settings-phone-number-title" = "Riigi kood ja telefoninumber";
 "settings-phone-number-placeholder" = "372XXXXXXXX";
