--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -151,7 +151,7 @@
 "signing-in-progress" = "Signing in progress.\nPlease wait.";
 "decryption-in-progress" = "Decryption in progress.\nPlease wait.";
 "wrong-pin2" = "Wrong PIN2. You have %d attempts left.";
-"wrong-pin1" = "Wrong PIN1. You have %d attempts left.";
+"wrong-pin1" = "Wrong PIN1. You have %1$d attempts left.";
 "wrong-pin2-single" = "Wrong PIN2. You have 1 attempt left until your PIN2 is blocked.";
 "wrong-pin1-single" = "Wrong PIN1. You have 1 attempt left until your PIN1 is blocked.";
 "pin2-textfield-label" = "Enter PIN2";
