--- a/MoppApp/MoppApp/ru.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/ru.lproj/Localizable.strings
@@ -152,7 +152,7 @@
 "signing-in-progress" = "Происходит подписание.\nПожалуйста, подождите.";
 "decryption-in-progress" = "Decryption in progress.\nPlease wait.";
 "wrong-pin2" = "Неверный PIN2. У Вас осталось %d попыток.";
-"wrong-pin1" = "Неверный PIN1. У Вас осталось %d попыток.";
+"wrong-pin1" = "Неверный PIN1. У Вас осталось %1$d попыток.";
 "wrong-pin2-single" = "Неверный PIN2. У Вас осталась 1 попытка до блокировки Вашего PIN2.";
 "wrong-pin1-single" = "Неверный PIN1. У Вас осталась 1 попытка до блокировки Вашего PIN1.";
 "pin2-textfield-label" = "Введите PIN2";
