--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -145,8 +145,8 @@
 "card-reader-state-reader-not-found" = "No card readers found";
 "card-reader-state-id-card-not-found" = "Reader found.\nInsert your ID-card into the reader.";
 "card-reader-state-id-card-connected" = "ID-card found.\nRequesting information.";
-"card-reader-state-ready-for-pin2" = "Ready to sign with ID-card";
-"card-reader-state-ready-for-pin1" = "Ready to decrypt with ID-card.";
+"card-reader-state-ready-for-pin2" = "Ready to sign with ID-card. \n%@ (%@)";
+"card-reader-state-ready-for-pin1" = "Ready to decrypt with ID-card.\n%@ (%@)";
 "signing-in-progress" = "Signing in progress.\nPlease wait.";
 "decryption-in-progress" = "Decryption in progress.\nPlease wait.";
 "wrong-pin2" = "Wrong PIN2. You have %d attempts left.";
