* Fixed opening datafile preview if datafile contains relative path
Display datafiles in container view without relative path

MOPPIOS-519

Signed-off-by: Sander Hunt <sander.hunt@fob-solutions.com>

--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -241,3 +241,4 @@
 "diagnostics-libraries-label" = "Libraries:";
 "about-title" = "Info";
 "jailbreak-message" = "This app cannot be used in jailbroken device";
+"datafile-preview-failed" = "Error opening document for preview";
