--- a/MoppApp/MoppApp/et.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/et.lproj/Localizable.strings
@@ -242,3 +242,4 @@
 "diagnostics-libraries-label" = "Teegid";
 "about-title" = "Info";
 "jailbreak-message" = "Seda rakendust ei saa kasutada turvamata (ingl jailbroken) seadmes";
+"datafile-preview-failed" = "Faili avamine eelvaateks ebaõnnestus";
