--- a/MoppApp/MoppApp/ru.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/ru.lproj/Localizable.strings
@@ -242,3 +242,4 @@
 "diagnostics-libraries-label" = "Библиотеки";
 "about-title" = "Информация";
 "jailbreak-message" = "Данное приложение не может быть использовано на взломанном (джейлбрейк) устройстве";
+"datafile-preview-failed" = "Не удалось открыть документ для предварительного просмотра";
