--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -141,7 +141,7 @@
 "search-container-file" = "Search container file";
 "sign-title-mobile-id" = "Mobile-ID";
 "sign-title-id-card" = "ID-Card";
-"card-reader-state-initial" = "Connect your card reader to your phone and insert ID-card into the reader.\nIf you are using bluetooth reader, phone's bluetooth connection must be enabled.";
+"card-reader-state-initial" = "Connect the card reader and insert your ID-card into the reader.";
 "card-reader-state-reader-not-found" = "No card readers found";
 "card-reader-state-id-card-not-found" = "Reader found.\nInsert your ID-card into the reader.";
 "card-reader-state-id-card-connected" = "ID-card found.\nRequesting information.";
@@ -160,7 +160,7 @@
 "generic-error-message" = "Something went wrong. Please try again";
 "decryption-error-message" = "Something went wrong with decryption. Please try again";
 "signing-aborted-message" = "Signing process aborted";
-"my-eid-status-reader-not-found" = "Connect your card reader to your phone and insert ID-card into the reader.\nIf you are using bluetooth reader, phone's bluetooth connection must be enabled.";
+"my-eid-status-reader-not-found" = "Connect your card reader to your phone and insert ID-card into the reader.";
 "my-eid-status-card-not-found" = "Reader found.\nInsert your ID-card into the reader.";
 "my-eid-status-requesting-data" = "ID-card found.\nRequesting information.";
 "my-eid-cert-expired" = "expired";
