--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -234,6 +234,8 @@
 "settings-phone-number-placeholder" = "372XXXXXXXX";
 "settings-id-code-title" = "Personal code";
 "settings-id-code-placeholder" = "Personal code";
+"settings-timestamp-url-title" = "Time Stamp URL";
+"settings-timestamp-url-placeholder" = "Time Stamp URL";
 "diagnostics-title" = "Diagnostics";
 "diagnostics-app-version" = "Application version";
 "diagnostics-ios-version" = "OS";
