--- a/MoppApp/MoppApp/ru.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/ru.lproj/Localizable.strings
@@ -235,8 +235,9 @@
 "settings-phone-number-placeholder" = "372XXXXXXXX";
 "settings-id-code-title" = "Личный код";
 "settings-id-code-placeholder" = "Личный код";
-"settings-timestamp-url-title" = "Time Stamp URL";
-"settings-timestamp-url-placeholder" = "Time Stamp URL";
+"settings-timestamp-url-title" = "Time Stamp service URL";
+"settings-timestamp-url-placeholder" = "";
+"settings-timestamp-use-default-title" = "Use default";
 "diagnostics-title" = "Диагностика";
 "diagnostics-app-version" = "Версия приложения";
 "diagnostics-ios-version" = "Операционная система";
