--- a/MoppApp/MoppApp/ru.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/ru.lproj/Localizable.strings
@@ -247,3 +247,7 @@
 "about-title" = "Информация";
 "jailbreak-message" = "Данное приложение не может быть использовано на взломанном (джейлбрейк) устройстве";
 "datafile-preview-failed" = "Не удалось открыть документ для предварительного просмотра";
+"central-configuration" = "Центральная конфигурация:";
+"last-update-check" = "ПОСЛЕДНЯЯ ПРОВЕРКА:";
+"update-date" = "ДАТА ОБНОВЛЕНИЯ:";
+"refresh-configuration" = "ПРОВЕРЬТЕ ОБНОВЛЕНИЯ";
